--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -498,11 +498,11 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
         <hr>
         <table class="sitemap-table">
             <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-            <tr><td>About</td><td><a href="../../about.html">About</a></td><td>01/15/2026</td></tr>
-            <tr><td>Interests</td><td><a href="../../interests.html">Interests</a></td><td>01/15/2026</td></tr>
-            <tr><td>USC Life</td><td><a href="../../usc.html">USC Life</a></td><td>01/15/2026</td></tr>
-            <tr><td>Portfolio</td><td><a href="../../portfoliopage.html">ClassWork</a></td><td>01/15/2026</td></tr>
-            <tr><td>Vitae</td><td><a href="../../vitae.html">Vitae</a></td><td>01/15/2026</td></tr>
+            <tr><td>Licenses</td><td><a href="../../licenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
+            <tr><td>Usage</td><td><a href="../../mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
+            <tr><td>Types</td><td><a href="../../licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="../../mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>TypeReviews</td><td><a href="../../reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
         </table>
     </div>
 
@@ -520,4 +520,5 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </div>
 </body>
 </html>
+
 
