--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -267,11 +267,13 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </section>
 
 <section id="pricing">
-    <h2>License Store</h2>
+    <span align="center"><h2>License Store</h2></span>
     <p>Choose the perfect license for your needs.</p>
 
     <!-- ENTERPRISE LICENSES -->
+    <HR>
     <h3 id="nopricing-enterprise">Enterprise Licenses</h3>
+    <HR>
     <div class="products">
 
         <div class="product-card">
@@ -520,5 +522,6 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </div>
 </body>
 </html>
+
 
 
