--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -87,7 +87,7 @@ footer {
     color: #4b5563;
 }
 #sales{ position: relative; margin: 0 auto; width: 1560px; background-color: darkgreen;}
-.container{position: relative; margin: 0 auto; width: 1560px;  border-radius: 5px; line-height: 1.6;}
+.container{position: relative; margin: 0 auto; width: 1560px;  border-radius: 5px; line-height: 1.6; text-align: center;}
 .containertop{position: relative; margin: 0 auto; width: 1570px;  border-radius: 5px;}
 nav { background: #000000; border-bottom: 1px solid #1f3b2d; padding: 0; } 
 nav .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; } 
@@ -522,6 +522,7 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </div>
 </body>
 </html>
+
 
 
 
