--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -267,8 +267,8 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </section>
 
 <section id="pricing">
-    <span align="center"><h2>License Store</h2></span>
-    <p>Choose the perfect license for your needs.</p>
+    <span align="center"><font color="green"><h2>License Store</h2></font></span>
+    <span align="center"><p>Choose the perfect license for your needs.</p></span>
 
     <!-- ENTERPRISE LICENSES -->
     <HR>
@@ -522,6 +522,7 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </div>
 </body>
 </html>
+
 
 
 
