--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -97,6 +97,10 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 .dropdown-content { display: none; position: absolute; background: #000000; border: 1px solid #1f3b2d; min-width: 180px; z-index: 1000; } 
 .dropdown-content li a { padding: 12px 16px; color: #4ade80; } .dropdown-content li a:hover { background: #0a2f1f; color: #ffffff; } 
 .dropdown:hover .dropdown-content { display: block; }
+li
+{
+text-align: left;
+}
 </style>
 
 
@@ -522,6 +526,7 @@ nav a:hover { background: #0a2f1f; color: #ffffff; }
 </div>
 </body>
 </html>
+
 
 
 
