--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -101,6 +101,10 @@ li
 {
 text-align: left;
 }
+p
+{
+text-align: left;
+}
 </style>
 
 
@@ -526,6 +530,7 @@ text-align: left;
 </div>
 </body>
 </html>
+
 
 
 
