--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -10,7 +10,10 @@
 
 h1 { margin-left: 30px;}
 h2 { margin-left: 30px;}
-h3 { margin-left: 30px;}
+h3 { 
+    margin-left: 30px;
+    text-align: left;
+    }
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -530,6 +533,7 @@ text-align: left;
 </div>
 </body>
 </html>
+
 
 
 
