--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -1,12 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>License Manager</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css"> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
 
+h1 { margin-left: 30px;}
+h2 { margin-left: 30px;}
+h3 { 
+    margin-left: 30px;
+    text-align: left;
+    }
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1a1a1a; /* near-black text */
+    background-color: black; 
+    /*background-color: #f4f7f5;  soft gray-green background */
+
+}
+
+header {
+    background: #0a2f1f; /* deep forest green */
+    color: #ffffff;
+    padding: 40px 20px;
+    text-align: center;
+}
+
+nav {
+    background: #000000; /* black */
+    border-bottom: 1px solid #1f3b2d; /* dark green accent */
+    padding: 12px 20px;
+    text-align: center;
+}
+
+nav a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: #4ade80; /* bright green accent */
+    font-weight: bold;
+}
+
+section h2 {
+    color: #0a2f1f; /* deep green */
+    margin-bottom: 20px;
+    margin-left: 30px;
+}
+
+.product-card {
+    background: #ffffff;
+    border: 1px solid #d1e7d9; /* pale green border */
+    border-radius: 6px;
+    padding: 25px;
+}
+
+.product-card h3 {
+    margin-top: 0;
+    color: #0a2f1f; /* deep green */
+}
+
+.cta {
+    background: darkgreen; /* was fffff all black */
+    color: #ffffff;
+    text-align: center;
+    padding: 50px 20px;
+    margin-top: 60px;
+}
+
+.cta a {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 12px 30px;
+    background: #4ade80; /* bright green */
+    color: #000000; /* black text */
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
+footer {
+    background: black;
+    border-top: 1px solid #d1e7d9;
+    text-align: center;
+    padding: 20px;
+    font-size: 0.9rem;
+    color: #4b5563;
+}
+#sales{ position: relative; margin: 0 auto; width: 85%; background-color: darkgreen;}
+.gacontainer{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; line-height: 1.6; text-align: center;}
+.containertop{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px;}
+nav { background: #000000; border-bottom: 1px solid #1f3b2d; padding: 0; } 
+nav .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; } 
+nav .menu > li { position: relative; } 
+nav a { display: block; padding: 14px 20px; text-decoration: none; color: #4ade80; font-weight: bold; } 
+nav a:hover { background: #0a2f1f; color: #ffffff; } 
+.dropdown-content { display: none; position: absolute; background: #000000; border: 1px solid #1f3b2d; min-width: 180px; z-index: 1000; } 
+.dropdown-content li a { padding: 12px 16px; color: #4ade80; } .dropdown-content li a:hover { background: #0a2f1f; color: #ffffff; } 
+.dropdown:hover .dropdown-content { display: block; }
+li
+{
+text-align: left;
+}
+p
+{
+text-align: left;
+}
+</style>
+
+
+</head>
 <body class="bg-light">
+<div class="gacontainer">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="Login.html">Login</a>
+            <a href="Logout.html">Logout</a>
+            <a href="Welcome.html">Welcome</a>
+            <a href="AllProducts.html">All Products</a>
+            <a href="LicenseTypes.html">LicenseTypes</a>
+            <a href="LicenseLogs.html">LicenseLogs</a>
+            <a href="MyLicenses.html">MyLicenses</a>
+            <a href="MyCart.html">MyCart</a>
+            <a href="AllReviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+</header>
+
+
 
 <div class="container py-4">
 
