--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -511,7 +511,7 @@ text-align: left;
         <hr>
         <table class="sitemap-table">
             <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
-            <tr><td>Licenses</td><td><a href="../../licenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
+            <tr><td>Licenses</td><td><a href="../../mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
             <tr><td>Usage</td><td><a href="../../mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
             <tr><td>Types</td><td><a href="../../licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
             <tr><td>Cart</td><td><a href="../../mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
@@ -533,6 +533,7 @@ text-align: left;
 </div>
 </body>
 </html>
+
 
 
 
