--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -91,7 +91,7 @@ footer {
     color: #4b5563;
 }
 #sales{ position: relative; margin: 0 auto; width: 85%; background-color: darkgreen;}
-.gacontainer{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; line-height: 1.6; text-align: center;}
+.gacontainer{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; line-height: 1.6; text-align: center; background-color: black;}
 .containertop{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px;}
 nav { background: #000000; border-bottom: 1px solid #1f3b2d; padding: 0; } 
 nav .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; } 
