--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css"> 
-<link rel="stylesheet" href="layout.css"> 
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">  
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
