--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -13,7 +13,7 @@
 
 
 </head>
-<body class="bg-light">
+<body class="bg-light" style="background-color: black">
 <div class="gacontainer">
 <div class="topnav">
     <div class="dropdown">
