--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>License Logs</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
-  <style>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">  
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses Logs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
     .acknowledged {
       color: green;
       font-weight: bold;
@@ -17,8 +18,39 @@
       cursor: pointer;
     }
   </style>
+
+
 </head>
-<body class="bg-light">
+<body class="bg-light" style="background-color: black">
+<div class="gacontainer">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="Login.html">Login</a>
+            <a href="Logout.html">Logout</a>
+            <a href="Welcome.html">Welcome</a>
+            <a href="AllProducts.html">All Products</a>
+            <a href="LicenseTypes.html">LicenseTypes</a>
+            <a href="LicenseLogs.html">LicenseLogs</a>
+            <a href="MyLicenses.html">MyLicenses</a>
+            <a href="MyCart.html">MyCart</a>
+            <a href="AllReviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+</header>
+
 
 <div class="container py-4">
   <h2 class="mb-4">License Logs</h2>
