--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -27,15 +27,15 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="Login.html">Login</a>
-            <a href="Logout.html">Logout</a>
-            <a href="Welcome.html">Welcome</a>
-            <a href="AllProducts.html">All Products</a>
-            <a href="LicenseTypes.html">LicenseTypes</a>
-            <a href="LicenseLogs.html">LicenseLogs</a>
-            <a href="MyLicenses.html">MyLicenses</a>
-            <a href="MyCart.html">MyCart</a>
-            <a href="AllReviews.html">AllReviews</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="products.html">All Products</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
         </div>
     </div>
