--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Review Manager</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+<meta charset="UTF-8">
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css"> 
+<link rel="stylesheet" href="greenville.css">     
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         th { cursor: pointer; }
     </style>
+</head>
+<body>
+<div class="container">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="products.html">All Products</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+</header>
 </head>
 <body class="bg-light">
 
