--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -4,11 +4,13 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css"> 
 <link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">     
+<link rel="stylesheet" href="greenville.css"> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Greenville Associates Enterprise Software | Enterprise Products </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-</style>
+    <style>
+        th { cursor: pointer; }
+    </style>
 </head>
 <body>
 <div class="container">
