--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="site.css"> 
 <link rel="stylesheet" href="layout.css"> 
-<link rel="stylesheet" href="greenville.css">     
+<link rel="stylesheet" href="greenville.css">    
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">    
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
@@ -431,6 +432,7 @@
 </div>
 </body>
 </html>
+
 
 
 
