--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -63,7 +63,7 @@
                     localStorage.setItem("loggedInUser", JSON.stringify(user));
 
                     // Redirect to licenses.html
-                    window.location.href = "licenses.html";
+                    window.location.href = "mylicenses.html";
                 } else {
                     errorBox.textContent = "Invalid username or password.";
                 }
