--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -50,7 +50,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <div align="center"><p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p></div>
 </header>
 
 
@@ -109,5 +109,5 @@
     </script>
 
 </body>
-<footer><div align="center"><h2>User Login</h2></div></footer>
+<footer><div align="center">&copy2026 - Greenville Associates Consulting</div></footer>
 </html>
