--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -11,11 +11,14 @@
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
+            width: 100%;
         }
         .login-box {
+            position: relative;
             width: 300px;
             padding: 20px;
             border: 1px solid #ccc;
+            margin: 0 auto;
         }
         #error {
             color: red;
