--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -72,7 +72,7 @@
 
         <p id="error"></p>
     </div>
-
+    </div>
     <script>
         document.getElementById("loginForm").addEventListener("submit", async (e) => {
             e.preventDefault();
