--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -47,7 +47,7 @@
  
 </div>
 
-
+</div>
 </div> <!-- Container End -->
 <div class="container2">
 <section class="middle-columns">
@@ -92,10 +92,8 @@
     <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
 </div>
 </section>
-<footer>
-    © 2026 Greenville Associates Enterprise Software. All rights reserved.
-</footer>
-</div>
 </body>
+<footer><div align="center">© 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
+
 </html>
 
