--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -93,6 +93,7 @@
 </div>
 </section>
 <footer><div align="center">© 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
+</div>
 </body>
 </html>
 
