--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -16,6 +16,7 @@
         .login-box {
             position: relative;
             width: 300px;
+            height: 300px;
             padding: 20px;
             border: 1px solid #ccc;
             margin: 0 auto;
