--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -38,12 +38,12 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 <div>
 
-<p>Welcome to Greenville Associates Enterprise Licensing Site!</p>
+<span><p>Welcome to Greenville Associates Enterprise Licensing Site!</p></span>
  
 </div>
 
