--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -54,7 +54,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <div align="center"><p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p></div>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 
@@ -73,7 +73,6 @@
 
         <p id="error"></p>
     </div>
-    <footer><div align="center">&copy2026 - Greenville Associates Consulting</div></footer>
     </div>
     <script>
         document.getElementById("loginForm").addEventListener("submit", async (e) => {
@@ -113,4 +112,5 @@
         });
     </script>
 </body>
+<footer><div align="center">&copy2026 - Greenville Associates Consulting</div></footer>
 </html>
