--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -33,6 +33,8 @@
     </div>
 
     <div class="right-links">
+        <a href="contact.html">contact</a>
+        <a href="alerts.html">alerts</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -40,7 +42,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 
