--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -37,7 +37,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 <nav>
@@ -431,6 +431,7 @@
 </div>
 </body>
 </html>
+
 
 
 
