--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -33,8 +33,8 @@
     </div>
 
     <div class="right-links">
-        <a href="contact.html">contact</a>
-        <a href="alerts.html">alerts</a>
+        <a href="userhelp.html">Help</a>
+        <a href="alerts.html">Alerts</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -287,7 +287,7 @@ loadLicenses();
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
     <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
 <footer>
