--- a/project/homepage/mylicenses.html
+++ b/project/homepage/mylicenses.html
@@ -34,7 +34,7 @@
 
     <div class="right-links">
         <a href="userhelp.html">Help</a>
-        <a href="alerts.html">Alerts</a>
+        <a href="usernotices.html">Alerts</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
