--- a/project/homepage/usernotices.html
+++ b/project/homepage/usernotices.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Notices</title>
-
-    <!-- Bootstrap CSS -->
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
-        rel="stylesheet"
-    >
-
-    <style>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css">
+<link rel="stylesheet" href="greenville.css">  
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Greenville Associates Enterprise Software | Enterprise Licensing - My Licenses</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
         body {
             background-color: #000;
             color: #0f0;
@@ -38,6 +35,41 @@
             color: #0f0;
         }
     </style>
+
+
+</head>
+<body class="bg-light" style="background-color: black">
+<div class="gacontainer">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="products.html">All Products</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
+        </div>
+    </div>
+
+    <div class="right-links">
+        <a href="userhelp.html">Help</a>
+        <a href="usernotices.html">Alerts</a>
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
+    
 </head>
 
 <body>
