--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -9,10 +9,6 @@
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            background-color: #000;
-            color: #0f0;
-        }
         .form-control, .form-control:focus {
             background-color: #111;
             color: #0f0;
@@ -28,10 +24,6 @@
         }
         label {
             font-weight: bold;
-        }
-        .container {
-            max-width: 900px;
-            margin-top: 40px;
         }
     </style>
 </head>
@@ -165,6 +157,55 @@
     </form>
 </div>
 
+<div class="container2">
+<section class="middle-columns">
+
+    <!-- CENTER COLUMN: MIAMI IMAGES -->
+    <div class="mid-col">
+        <img src="./images/miami1.jpg" style="width:48%; border-radius:5px;">
+        <img src="./images/miami3.jpg" style="width:48%; border-radius:5px;">
+    </div>
+    <!-- LEFT COLUMN: QUICK LINKS -->
+    <div class="mid-col">
+        <h3>Quick Links</h3>
+        <hr>
+        <ul class="quick-links">
+            <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
+            <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics</a></li>
+            <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>
+            <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
+            <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
+            <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
+        </ul>
+    </div>
+    <!-- RIGHT COLUMN: SITEMAP TABLE -->
+    <div class="mid-col">
+        <h3>Site Map</h3>
+        <hr>
+        <table class="sitemap-table">
+            <tr><th>Site Information</th><th>Page Link</th><th>Date Updated</th></tr>
+            <tr><td>Licenses</td><td><a href="mylicenses.html">MyLicenses</a></td><td>01/15/2026</td></tr>
+            <tr><td>Usage</td><td><a href="mylicenselogs.html">MyLicenseLogs</a></td><td>01/15/2026</td></tr>
+            <tr><td>Types</td><td><a href="licenseinfo.html">LicenseInfo</a></td><td>01/15/2026</td></tr>
+            <tr><td>Cart</td><td><a href="mycart.html">MyCart</a></td><td>01/15/2026</td></tr>
+            <tr><td>TypeReviews</td><td><a href="reviews.html">Reviews</a></td><td>01/15/2026</td></tr>
+        </table>
+    </div>
+
+</section>
+<section class="sales">
+<div class="cta" id="contact">
+    <h2>Talk to Sales</h2>
+    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
+    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+</div>
+</section>
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
+</div>
+
+    
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
