--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<div class="container">
+<div class="container2">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
