--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -196,8 +196,8 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
 <footer>
