--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -63,7 +63,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 <div class="container py-4">
@@ -279,8 +279,8 @@ loadProducts();
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
 
