--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="login.css" />
-<link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="greenville.css" />
+ <link rel="stylesheet" href="./css/dropmenu.css" />
 <script src="./js/bikes.js"></script>
     <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -213,5 +213,5 @@ width: 400px;
   });
 </script>
 </body>
-<footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
+<footer class="footer"> &copy; Greenville Associates Consulting, Inc <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
