--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -48,7 +48,7 @@
 
 <header>
     <h1>Greenville Enterprise Software</h1>
-    <p>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</p>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
 
@@ -161,8 +161,8 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
+    <a href="contact.html">Contact Sales</a>
 </div>
 </section>
 <footer>
