--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="login.css" />
-  <link rel="stylesheet" href="dropmenu.css" />
+  <link rel="stylesheet" href="./css/login.css" />
+  <link rel="stylesheet" href="./css/dropmenu.css" />
   <script src="./js/bikes.js"></script>
   <title>Mountain Bike Parks</title>
   <!-- jQuery -->
@@ -319,10 +319,16 @@ left:20px;
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
         <div class="dropdown-content">
-          <a href="index.html">Site Home</a>
-          <a href="cartreview.html">MyCart</a>
-          <a href="mybookings5.html">MyReservations</a>
-          <a href="manager.html" id="managerhtml">Manager Utilities</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="products.html">All Products</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
         </div>
       </div> 
       <div class="logo">&nbsp;&nbsp;MyLinkv25 - Review Parks</div>
@@ -1182,6 +1188,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 </body>
 <footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
+
 
 
 
