--- a/project/homepage/book555.html
+++ b/project/homepage/book555.html
@@ -1186,8 +1186,9 @@ document.addEventListener('DOMContentLoaded', async () => {
 });
 </script>
 </body>
-<footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
+<footer class="footer"> &copy; Greenville Associates Consulting, Inc. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
 </html>
+
 
 
 
