--- a/project/homepage/cartcancel.html
+++ b/project/homepage/cartcancel.html
@@ -44,11 +44,16 @@ width: 400px;
         <button class="jsmenu"><img src="./images/jsmenu4.png" width="100%" height="350px"></button> 
         <div class="dropdown-content">
              <a href="index.html">Site Home</a>
-                  <a href="cartreview.html">MyCart</a>
-                  <a href="parks5.html">Review Park Options</a>
-                  <a href="parksreview5.html">Park Reviews</a>
-                  <a href="mybookings5.html">MyReservations</a>
-                  <a href="manager.html">Manager Utilities</a>
+            <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="products.html">All Products</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
         </div>
       </div> 
     <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Cancel Reservation</H5></div><BR>
