--- a/project/homepage/reviewpayment5.html
+++ b/project/homepage/reviewpayment5.html
@@ -150,7 +150,7 @@ width: 400px;
   </script>
 
   <footer class="footer text-center mt-5">
-    &copy; Cocky Consulting 2025. <br> All rights reserved.<br>
+    &copy; Greenville Associates Consulting <br> All rights reserved.<br>
     <a href="sitemap.html" class="sitelink">SiteMap</a>
   </footer>
 </body>
