--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -421,16 +421,17 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
+</div>
+</body>
 <footer>
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
-</div>
-</body>
 </html>
+
 
 
 
