--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -421,7 +421,7 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
@@ -431,6 +431,7 @@
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 </html>
+
 
 
 
