--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -2,21 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="greenville.css" />
- <link rel="stylesheet" href="./css/dropmenu.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<link rel="stylesheet" href="greenville.css" />
+<link rel="stylesheet" href="./css/dropmenu.css" />
+<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="layout.css"> 
+<link rel="stylesheet" href="greenville.css">    
 <script src="./js/bikes.js"></script>
-    <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
-  <title>Your Cart</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+<title>Your Cart</title>
+<style>
     .highlight {
       background-color: #e0f3ff !important;
     }
@@ -79,7 +77,7 @@ width: 400px;
             <a href="Help.html">Help</a>
             </div>
     </div> 
-      <div class="logo">&nbsp&nbsp&nbsp<H5>MyLinkv25</H5></div>
+      <div class="logo">&nbsp&nbsp&nbsp<H5>MyCart</H5></div>
       </div>
       <div class="nav-right">
         <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
