--- a/project/homepage/userhelp.html
+++ b/project/homepage/userhelp.html
@@ -196,7 +196,7 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
