--- a/project/homepage/mylicenselogs.html
+++ b/project/homepage/mylicenselogs.html
@@ -162,7 +162,7 @@
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
     <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span>
-    <a href="contact.html">Contact Sales</a>
+    <a href="contact.html">Contact Sales</a><BR>
 </div>
 </section>
 <footer>
