--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -20,10 +20,17 @@
             padding: 20px;
             border: 1px solid #ccc;
             margin: 0 auto;
+            border: 2px solid black;
+            margin-top: 10px;
         }
         #error {
             color: red;
             margin-top: 10px;
+        }
+        footer
+        {
+        position: relative;
+        margin-top: 20px;
         }
     </style>
 </head>
