--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -48,8 +48,6 @@
 </div>
 
 </div>
-</div> <!-- Container End -->
-<div class="container2">
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -88,8 +86,8 @@
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
 <footer><div align="center">© 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
