--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -1,19 +1,21 @@
+   
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<link rel="stylesheet" href="greenville.css" />
-<link rel="stylesheet" href="./css/dropmenu.css" />
+<meta charset="UTF-8">
 <link rel="stylesheet" href="site.css"> 
 <link rel="stylesheet" href="layout.css"> 
+<link rel="stylesheet" href="./css/dropmenu.css" />
 <link rel="stylesheet" href="greenville.css">    
 <script src="./js/bikes.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">-->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
 <title>Your Cart</title>
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     .highlight {
       background-color: #e0f3ff !important;
@@ -52,19 +54,14 @@ align-items: center;         /* vertical centering */
 {
 width: 400px;
 }
-
 </style>
-  </style>
 </head>
-  
-
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-    <!-- Navigation Bar -->
-    <div class="navbar">
-      <div class="nav-left">
-            <div class="dropdown">
-                  <button class="jsmenu"><img src="./images/jsmenu4.png"></button> 
-                  <div class="dropdown-content">
+<div class="container">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
@@ -75,18 +72,20 @@ width: 400px;
             <a href="mycart.html">MyCart</a>
             <a href="reviews.html">AllReviews</a>
             <a href="Help.html">Help</a>
-            </div>
-    </div> 
-      <div class="logo">&nbsp&nbsp&nbsp<H5>MyCart</H5></div>
-      </div>
-      <div class="nav-right">
-        <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
-        <span id="H3UserBanner"></span>
-        <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
-        <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
-                <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
-      </div>
+        </div>
     </div>
+
+    <div class="right-links">
+        <a href="login.html">Login</a>
+        <a href="logout.html">Logout</a>
+    </div>
+</div>
+
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>  
+   
   <div align="center" id="banner"><span id="userGreeting">Welcome Guest</span></div>
   <div class="container py-5">
       <div id="cart-items" class="row g-4 mb-4"></div>
