--- a/project/homepage/reviews.html
+++ b/project/homepage/reviews.html
@@ -310,13 +310,11 @@ loadReviews();
 <section class="sales">
 <div class="cta" id="contact">
     <h2>Talk to Sales</h2>
-    <p>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</p>
-    <a href="mailto:sales@greenvilleassociates.com">Contact Sales</a>
+    <span>Contact our enterprise sales team to discuss licensing, pricing, and deployment options.</span><BR>
+    <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
-<footer>
-    © 2026 Greenville Associates Enterprise Software. All rights reserved.
-</footer>
+<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</footer>
 </div>
 </body>
 </html>
