--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -56,6 +56,7 @@
     </div>
 
     <div class="right-links">
+        <a href="home.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
