--- a/project/homepage/index.html
+++ b/project/homepage/index.html
@@ -19,7 +19,8 @@
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
-            <a href="products.html">All Products</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">AdminProducts</a>
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
             <a href="mylicenses.html">MyLicenses</a>
@@ -430,6 +431,7 @@
 </div>
 </body>
 </html>
+
 
 
 
