--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -59,12 +59,13 @@ font-size: 12pt;
             <a href="Help.html">Help</a>
              </div>
     </div> 
-      <div class="logo">&nbsp&nbsp<H5>MyLinkv25 - Review Parks</H5></div>
+      <div class="logo">&nbsp&nbsp<H5>Purchase Licenses</H5></div>
       </div>
       <div class="nav-right">
         <img src="./images/bluecircle.png" id="profilephototarget" alt="User" style="cursor:pointer;" onclick="window.location.href='profile.html'" />
         <span id="H3UserBanner"></span>
-        <a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
+        <a href="index.html" id="homeBtn" class="btn secondary-btn">Home</a>
+		<a href="login.html" id="loginBtn" class="btn secondary-btn" onclick="loginUser(event)">Login</a>
         <a href="login.html" id="logoutBtn" class="btn secondary-btn" onclick="logoutUser(event)">Logout</a>
                 <a href="cartreview.html" id="cartBtn3"><img src="./images/cart4.png" width="40px" height="40px"></a>
       </div>
@@ -164,6 +165,6 @@ font-size: 12pt;
   </script>
 </body>
    <!-- Footer -->
-  <footer class="footer"> &copy; Cocky Consulting 2025. <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></footer>
+  <div class="footer"> &copy; Greenville Associates Consulting & FusionCommerce, Inc<br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></div>
 
 </html>
