--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -42,8 +42,8 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
 
-<div>
-    <BR><BR><div align="center"><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span></div><BR><BR>
+<div align="center" style="height: 500px">
+    <BR><BR><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
 </div>
 
 <div class="container2">
