--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- SCROLLABLE PRODUCT GRID -->
-    <div class="product-table-wrapper">
+    <div class="product-table-wrapper" style="min-height:500px;">
         <table class="table table-striped table-hover" id="productTable">
             <thead class="table-dark">
                 <tr>
