--- a/project/homepage/products.html
+++ b/project/homepage/products.html
@@ -283,9 +283,7 @@ loadProducts();
 </div>
 </section>
 
-<footer>
-    © 2026 Greenville Associates Enterprise Software. All rights reserved.
-</footer>
+<div class="footer"> © 2026 Greenville Associates Enterprise Software. All rights reserved.</div>
 
 </div>
 </body>
