--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -35,7 +35,6 @@
     </style>
 </head>
 <body>
-<div class="container">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -54,7 +53,7 @@
     </div>
 
     <div class="right-links">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -81,7 +80,6 @@
         <p id="error"></p>
     </div>
         <div align="center" class="footer">&copy2026 - Greenville Associates Consulting</div>
-    </div>
     <script>
         document.getElementById("loginForm").addEventListener("submit", async (e) => {
             e.preventDefault();
