--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -122,9 +122,10 @@
     <a href="contacts.html">Contact Sales</a>
 </div>
 </section>
+<footer align="center" class="footer">&copy2026 - Greenville Associates Consulting</footer>
 </div>
     
-        <div align="center" class="footer">&copy2026 - Greenville Associates Consulting</div>
+        
     <script>
         document.getElementById("loginForm").addEventListener("submit", async (e) => {
             e.preventDefault();
