--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -42,7 +42,7 @@
             <a href="login.html">Login</a>
             <a href="logout.html">Logout</a>
             <a href="welcome.html">Welcome</a>
-            <a href="licenses.html">BuyNow</a>
+            <a href="licenses6.html">BuyNow</a>
             <a href="products.html">ProductAdministrator</a>
             <a href="licensetypes.html">LicenseTypes</a>
             <a href="mylicenselogs.html">LicenseLogs</a>
