--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/login.css" />
   <link rel="stylesheet" href="./css/dropmenu.css" />
+  <link rel="stylesheet" href="site.css"> 
+  <link rel="stylesheet" href="layout.css"> 
+  <link rel="stylesheet" href="greenville.css">    
   <script src="./js/bikes.js"></script>
   <title>Mountain Bike Parks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
