--- a/project/homepage/reviews5.html
+++ b/project/homepage/reviews5.html
@@ -47,12 +47,17 @@
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/jsmenu4.png" alt="Menu"></button>
         <div class="dropdown-content">
-          <a href="index.html">Site Home</a>
-          <a href="cartreview.html">MyCart</a>
-          <a href="parks5.html">Review Park Options</a>
-          <a href="parksreview5.html">Park Reviews</a>
-          <a href="mybookings5.html">MyReservations</a>
-          <a href="manager.html">Manager Utilities</a>
+             <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="products.html">ProductAdministrator</a>
+            <a href="licensetypes.html">LicenseTypes</a>
+            <a href="mylicenselogs.html">LicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="mycart.html">MyCart</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="Help.html">Help</a>
         </div>
       </div>
       <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">MyLinkv25 - ParkReviews</h5></div>
