--- a/project/homepage/mycart.html
+++ b/project/homepage/mycart.html
@@ -53,7 +53,7 @@ width: 400px;
 </style>
 </head>
 <body onload="checkpll(); checkUserStatus(); displayProfilePicture();">
-<div class="container">
+<div class="gacontainer">
 <div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
@@ -244,8 +244,8 @@ width: 400px;
     </div>
 
 </section> 
-<div class="footer"> &copy; Greenville Associates Consulting, Inc <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></div>
 </div>
+<div class="footer"> &copy; Greenville Associates Consulting, Inc <br> All rights reserved.<br>  <span align="center"><a href="sitemap.html" class="sitelink">SiteMap</a></span></div>
 </body>
 
 </html>
