--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -15,13 +15,14 @@
         }
         .login-box {
             position: relative;
-            width: 500px;
-            height: 500px;
+            width: 700px;
+            height: 400px;
             padding: 20px;
             border: 1px solid #ccc;
             margin: 0 auto;
             border: 2px solid black;
             margin-top: 30px;
+            margin-bottom: 100px;
         }
         #error {
             color: red;
