--- a/project/homepage/welcome.html
+++ b/project/homepage/welcome.html
@@ -9,6 +9,7 @@
 <title>Greenville Associates Enterprise Software | Welcome</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+    #threeheader{margin-left:50px;}
 </style>
 </head>
 <body>
@@ -32,6 +33,7 @@
 
     <div class="right-links">
         <a href="index.html">Home</a>
+        <a href="userhelp.html">UserHelp</a>
         <a href="login.html">Login</a>
         <a href="logout.html">Logout</a>
     </div>
@@ -43,7 +45,7 @@
 </header>
 
 <div align="center" style="height: 500px">
-    <BR><BR><span><H3>Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
+    <BR><BR><span><H3 id="threeheader">Welcome to Greenville Associates Enterprise Licensing Site!</H3></span><BR><BR>
 </div>
 
 <div class="container2">
