--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -66,6 +66,7 @@
     <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
 </header>
     <div class="login-box">
+            <img src="UserIcon.png" width="200px" height="200px">
             <form id="loginForm">
             <label>Email:</label>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="text" id="email" required><br><br>
 
