--- a/project/homepage/login.html
+++ b/project/homepage/login.html
@@ -34,7 +34,13 @@
         margin-top: 20px;
         }
 
-        .toparea{width: 100%; border: 2px solid lightgrey;}
+        .toparea{
+                width: 100%; 
+                border: 2px solid lightgrey; 
+                margin-top: 10px; 
+                margin-bottom: 10px;
+                border-radius: 15px;
+                }
     </style>
 </head>
 <body>
