--- a/project/homepage/licenses6.html
+++ b/project/homepage/licenses6.html
@@ -103,8 +103,8 @@
 
 <!-- HERO -->
 <section class="hero">
-    <h2>Mountain Bike Parks</h2>
-    <p>Explore parks, filter by state, and book your next adventure.</p>
+    <h2>License Inventory Options</h2>
+    <p>Review Existing Licenses and Information</p>
 </section>
 
 <!-- MAIN CONTENT -->
